--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.Sub-title {
+  color: gray;
+  margin-top: -15px;
+  font-size: 0.8em;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
